fixed overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -268,6 +268,7 @@ ul {
 html {
   font-size: 125%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
